# OrbitSim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ETL/: BodyETL.py  ETL.py  README.md  SatelliteETL.py
ETL/Input/: celestrak.txt  exoplanets.csv
Simulator/: .gitignore  CMakeLists.txt
Simulator/Dependencies/imgui/bin-int/Debug-windows-x86_64/ImGui/ImGui.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  ImGui.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Simulator/Dependencies/imgui/bin-int/Release-windows-x86_64/ImGui/ImGui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ImGui.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Simulator/Dependencies/walnut/Walnut/: Application.cpp  Enable.h  EntryPoint.h
Simulator/assets/Data/: exoplanets.json
Simulator/assets/ImGui/: imgui.ini
Simulator/include/: csv2.h
Simulator/src/: Platform.h  main.cpp
Simulator/src/Graphics/: Application.cpp  Application.h  OrbitSim.cpp
Simulator/src/Graphics/Scenes/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneSelection.h
Simulator/src/Graphics/Scenes/Components/: Bodies.cpp  Bodies.h  Image.h  ImageResizer.cpp  ImageResizer.h  Orbit.cpp  Orbit.h  OrbitalPropogator.cpp  OrbitalPropogator.h  Texture.cpp  Texture.h  TriangleRenderer.cpp  TriangleRenderer.h
Simulator/src/Graphics/Scenes/Components/ImGui/: Section.cpp  Section.h
Simulator/src/Graphics/Scenes/Components/Shapes/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Sphere.cpp  Sphere.h
Simulator/src/Graphics/Scenes/EarthOrbitViewer/: EarthOrbitViewer.cpp  EarthOrbitViewer.h
Simulator/src/Graphics/Scenes/ObjectViewer/: ObjectViewer.cpp  ObjectViewer.h
Simulator/src/Graphics/Scenes/OpeningScene/: Camera.cpp  Camera.h  OpeningScene.cpp  OpeningScene.h  OpeningSceneCamera.cpp  OpeningSceneCamera.h
Simulator/src/Graphics/Scenes/OrbitViewer/: Camera.cpp  OrbitCamera.cpp  OrbitCamera.h  OrbitViewer.cpp  OrbitViewer.h
Simulator/src/Graphics/Scenes/PlanetSearch/: PlanetData.h  PlanetDatabase.cpp  PlanetDatabase.h  PlanetSearch.cpp  PlanetSearch.h
Simulator/src/Graphics/Scenes/SatelliteSearch/: SatelliteData.h  SatelliteDatabase.cpp  SatelliteDatabase.h  SatelliteSearch.cpp  SatelliteSearch.h
Simulator/src/Visualization/: Camera.cpp  Camera.h  Controls.cpp  Controls.h  Image.cpp  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  ViewPort.cpp  ViewPort.h
Simulator/src/Visualization/Bodies/: Body.cpp  Body.h  Ellipse.cpp  Ellipse.h  Sphere.cpp  Sphere.h
Simulator/src/Visualization/Body/: Sphere.cpp  Sphere.h  Texture.cpp  Texture.h
Simulator/src/Visualization/Orbit/: Ellipse.cpp  Ellipse.h  OrbitalPropogator.cpp  OrbitalPropogator.h
Simulator/src/core/: Reference.cpp  Reference.h  SimulationTime.cpp  SimulationTime.h
Simulator/src/core/math/: vectorOps.h
Simulator/src/core/orbit/: CelestialObject.cpp  CelestialObject.h  CentralBody.h  OrbitalInvariants.h  OrbitalMovement.cpp  OrbitalMovement.h  OrbitalObject.h  OrbitalPropogator.cpp  OrbitalPropogator.h  constants.h
Simulator/src/core/util/: ColorConversion.cpp  ColorConversion.h  FileNamer.h  ProgressBar.h  Random.h  Timer.h  Trie.h
Simulator/src/objects/: CelestialObject.cpp  OrbitalObject.cpp  constants.h
Simulator/src/orbit/: CelestialObject.h  CentralBody.cpp  CentralBody.h  OrbitalObject.cpp  OrbitalObject.h  OrbitalPropogator.cpp  OrbitalPropogator.h
Simulator/src/util/: FileNamer.h  Timer.cpp  csvWriter.h
Visualization/: requirements.txt  visualize.py
scripts/: setup.bat
src/: main.cpp
src/math/: vectorOps.h
src/objects/: CentralBody.cpp  CentralBody.h  Objects.cpp  Objects.h  OrbitalInvariants.cpp  OrbitalInvariants.h  OrbitalObject.cpp  OrbitalObject.h
src/orbit/: OrbitalPropogator.cpp  OrbitalPropogator.h
src/util/: FileNamer.h  csvWriter.h
src/visualization/: Application.cpp  Application.h  KeyCodes.h  KeyEvent.h  Layer.h  LayerStack.cpp  LayerStack.h  Timestep.h  Window.h  WindowsWindow.cpp  WindowsWindow.h
src/visualization/Events/: ApplicationEvent.h  Event.h  MouseCodes.h  MouseEvent.h
